fix: unit tests added and corrected context for buildkit